crates/doop/tests/compile_fail/traitor.stderr
error[E0599]: no function or associated item named `t2` found for struct `S1` in the current scope
  --> tests/compile_fail/traitor.rs:23:28
   |
3  | struct S1;
   | ---------- function or associated item `t2` not found for this
...
23 |         for method in [t1, t2, t3] {
   |                            ^^ function or associated item not found in `S1`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
note: `T2` defines an item `t2`, perhaps you need to implement it
  --> tests/compile_fail/traitor.rs:10:1
   |
10 | trait T2{
   | ^^^^^^^^

error[E0599]: no function or associated item named `t3` found for struct `S1` in the current scope
  --> tests/compile_fail/traitor.rs:23:32
   |
3  | struct S1;
   | ---------- function or associated item `t3` not found for this
...
23 |         for method in [t1, t2, t3] {
   |                                ^^ function or associated item not found in `S1`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
note: `T3` defines an item `t3`, perhaps you need to implement it
  --> tests/compile_fail/traitor.rs:13:1
   |
13 | trait T3{
   | ^^^^^^^^

error[E0599]: no function or associated item named `t1` found for struct `S2` in the current scope
  --> tests/compile_fail/traitor.rs:23:24
   |
4  | struct S2;
   | ---------- function or associated item `t1` not found for this
...
23 |         for method in [t1, t2, t3] {
   |                        ^^ function or associated item not found in `S2`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
note: `T1` defines an item `t1`, perhaps you need to implement it
  --> tests/compile_fail/traitor.rs:7:1
   |
7  | trait T1{
   | ^^^^^^^^

error[E0599]: no function or associated item named `t3` found for struct `S2` in the current scope
  --> tests/compile_fail/traitor.rs:23:32
   |
4  | struct S2;
   | ---------- function or associated item `t3` not found for this
...
23 |         for method in [t1, t2, t3] {
   |                                ^^ function or associated item not found in `S2`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
note: `T3` defines an item `t3`, perhaps you need to implement it
  --> tests/compile_fail/traitor.rs:13:1
   |
13 | trait T3{
   | ^^^^^^^^

error[E0599]: no function or associated item named `t1` found for struct `S3` in the current scope
  --> tests/compile_fail/traitor.rs:23:24
   |
5  | struct S3;
   | ---------- function or associated item `t1` not found for this
...
23 |         for method in [t1, t2, t3] {
   |                        ^^ function or associated item not found in `S3`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
note: `T1` defines an item `t1`, perhaps you need to implement it
  --> tests/compile_fail/traitor.rs:7:1
   |
7  | trait T1{
   | ^^^^^^^^

error[E0599]: no function or associated item named `t2` found for struct `S3` in the current scope
  --> tests/compile_fail/traitor.rs:23:28
   |
5  | struct S3;
   | ---------- function or associated item `t2` not found for this
...
23 |         for method in [t1, t2, t3] {
   |                            ^^ function or associated item not found in `S3`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
note: `T2` defines an item `t2`, perhaps you need to implement it
  --> tests/compile_fail/traitor.rs:10:1
   |
10 | trait T2{
   | ^^^^^^^^
